--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,12 +4,9 @@
     font-family: 'Jost', sans-serif;
 }
 
-
 /* Navigation Bar Section */
 nav{
     width: 100%;
-    color: black;
-    background-color: white;
 }
 
 nav > div.content{
@@ -21,9 +18,20 @@ nav > div.content > div.logo{
     width: 50%;
 }
 
+nav > div.content > div.logo > div.image {
+    width: 2.5rem;
+    height: 2.5rem;
+}
+
+nav > div.content > div.logo > div.image > img{
+    width: 100%;
+    height: 100%;
+}
+
 nav > div.content > div.menu{
     display: flex;
     width: 50%;
+    align-items: center;
 }
 
 nav > div.content > div.menu > h4{
