--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,8 +10,9 @@ nav{
 }
 
 nav > div.content{
-    width: 90%;
+    width: 85%;
     margin: auto;
+    display: flex;
 }
 
 nav > div.content > div.logo{
@@ -29,13 +30,13 @@ nav > div.content > div.logo > div.image > img{
 }
 
 nav > div.content > div.menu{
-    display: flex;
     width: 50%;
+    display: flex;
     align-items: center;
 }
 
 nav > div.content > div.menu > h4{
-    margin-left: 3rem;
+    margin-left: 1.5rem;
 }
 
 nav > div.content > div.menu > div{
@@ -43,10 +44,74 @@ nav > div.content > div.menu > div{
 }
 
 /* Home Section */
+div.home{
+    height: 90%;
+    width: 100%;
+    margin-top: 2rem;
+}
+
+div.home > div.content{
+    width: 90%;
+    margin: auto;
+    display: flex;
+}
+
+div.home > div.content > div.left{
+    width: 50%;
+}
+
+div.home > div.content > div.left > div.name{
+    margin-top: 12rem;
+}
+
+div.home > div.content > div.left > div.social_media > a > i{
+    color: black;
+    margin-top: 3rem;
+}
+
+div.home > div.content > div.right{
+    width: 50%;
+}
+
+div.home > div.content > div.right > div.image{
+    height: 70%;
+    width: 80%;
+    margin: auto;
+}
+
+div.home > div.content > div.right > div.image > img{
+    width: 100%;
+    height: 100%;
+}
 
 /* Projects Section */
 
 /* About Me section */
+div.about{
+    width: 100%;
+}
+
+div.about > div.content{
+    width: 90%;
+    margin: auto;
+}
+
+div.about > div.content > section{
+    margin-top: 1.5rem;
+    display: flex;
+}
+
+div.about > div.content > section > div.left{
+    width: 50%;
+}
+
+div.about > div.content > section > div.left > div.tools{
+    margin-top: 2rem;
+}
+
+div.about > div.content > section > div.right{
+    width: 50%;
+}
 
 /* Contact Me */
 
@@ -59,18 +124,18 @@ div.footer{
     margin: auto;
 }
 
-div.content{
+div.footer > div.content{
     display: flex;
     width: 80%;
     margin: auto;
     padding: 1.4rem 0;
 }
 
-div.description{
+div.footer > div.content > div.description{
     width: 50%;
 }
 
-div.social_media{
+div.footer > div.content > div.social_media{
     width: 50%;
     color: white;
     text-align: center;
