--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -169,6 +169,56 @@ div.about > div.content > section > div.right > div.items > div.source{
 }
 
 /* Contact Me */
+div.contact{
+    width: 100%;
+}
+
+div.contact > div.content{
+    width: 90%;
+    margin: auto;
+}
+
+div.contact > div.content > section {
+    display: flex;
+    width: 100%;
+}
+
+div.contact > div.content > section > div.left{
+    width: 50%;
+}
+
+div.contact > div.content > section > div.left > form > input[type=text]{
+    width: 100%;
+    padding: 1rem;
+    border: 0.06rem solid #ccc;
+    border-radius: 0.3rem;
+    box-sizing: border-box;
+    margin-top: 0.4rem;
+    margin-bottom: 1rem;
+    resize: vertical;
+}
+
+div.contact > div.content > section > div.left > form > input[type=submit] {
+    background-color: #000000;
+    width: 100%;
+    color: white;
+    padding: 0.8rem 1.3rem;
+    border: none;
+    border-radius: 0.3rem;
+    margin-bottom: 1rem;
+    cursor: pointer;
+  }
+
+div.contact > div.content > section > div.left > form > input[type=submit]:hover {
+    background-color: #202020;
+  }
+
+div.contact > div.content > section > div.right{
+    width: 40%;
+    margin: auto;
+}
+
+
 
 /* Footer */
 div.footer{
